Add licenses(["NOTICE"]) to all packages.

--- a/moonlight/conversions/BUILD
+++ b/moonlight/conversions/BUILD
@@ -4,6 +4,8 @@ package(
     default_visibility = ["//moonlight:__subpackages__"],
 )
 
+licenses(["notice"])  # Apache 2.0
+
 py_library(
     name = "conversions",
     srcs = ["__init__.py"],
