--- a/moonlight/data/knn_saved_model_20170514/BUILD
+++ b/moonlight/data/knn_saved_model_20170514/BUILD
@@ -2,6 +2,8 @@ package(
     default_visibility = ["//moonlight:__subpackages__"],
 )
 
+licenses(["notice"])  # Apache 2.0
+
 filegroup(
     name = "knn_saved_model_20170514",
     srcs = ["saved_model.pb"],
