--- a/moonlight/training/generation/BUILD
+++ b/moonlight/training/generation/BUILD
@@ -2,6 +2,8 @@
 # Generated training data for OMR.
 package(default_visibility = ["//moonlight:__subpackages__"])
 
+licenses(["notice"])  # Apache 2.0
+
 py_library(
     name = "generation",
     srcs = ["generation.py"],
