--- a/moonlight/music/BUILD
+++ b/moonlight/music/BUILD
@@ -4,6 +4,8 @@ package(
     default_visibility = ["//moonlight:__subpackages__"],
 )
 
+licenses(["notice"])  # Apache 2.0
+
 py_library(
     name = "constants",
     srcs = ["constants.py"],
