--- a/moonlight/score/state/BUILD
+++ b/moonlight/score/state/BUILD
@@ -6,6 +6,8 @@ package(
     default_visibility = ["//moonlight:__subpackages__"],
 )
 
+licenses(["notice"])  # Apache 2.0
+
 py_library(
     name = "state",
     srcs = ["__init__.py"],
