--- a/moonlight/structure/BUILD
+++ b/moonlight/structure/BUILD
@@ -5,6 +5,8 @@ package(
     default_visibility = ["//moonlight:__subpackages__"],
 )
 
+licenses(["notice"])  # Apache 2.0
+
 py_library(
     name = "structure",
     srcs = ["__init__.py"],
