--- a/moonlight/training/clustering/BUILD
+++ b/moonlight/training/clustering/BUILD
@@ -27,7 +27,8 @@ py_test(
     size = "medium",
     srcs = ["staffline_patches_dofn_test.py"],
     data = ["//moonlight/testdata:images"],
-    srcs_version = "PY2AND3",
+    srcs_version = "PY2ONLY",
+    tags = ["py2only"],
     deps = [
         ":staffline_patches_dofn",
         # absl/testing dep
@@ -51,7 +52,8 @@ py_binary(
 py_test(
     name = "staffline_patches_kmeans_pipeline_test",
     srcs = ["staffline_patches_kmeans_pipeline_test.py"],
-    srcs_version = "PY2AND3",
+    srcs_version = "PY2ONLY",
+    tags = ["py2only"],
     deps = [
         ":staffline_patches_kmeans_pipeline",
         # absl dep
