Add a VexFlow generator Beam pipeline.

--- a/moonlight/training/generation/BUILD
+++ b/moonlight/training/generation/BUILD
@@ -7,6 +7,8 @@ licenses(["notice"])  # Apache 2.0
 py_library(
     name = "generation",
     srcs = ["generation.py"],
+    srcs_version = "PY2ONLY",
+    data = ["vexflow_generator.js"],
     deps = [
         "//moonlight:engine",
         "//moonlight/protobuf:protobuf_py_pb2",
@@ -22,6 +24,7 @@ py_library(
 py_test(
     name = "generation_test",
     srcs = ["generation_test.py"],
+    srcs_version = "PY2ONLY",
     tags = ["manual"],
     deps = [
         ":generation",
@@ -35,4 +38,18 @@ py_library(
     srcs = ["image_noise.py"],
     srcs_version = "PY2AND3",
     deps = [],  # tensorflow dep
+)
+
+py_binary(
+    name = "vexflow_generator_pipeline",
+    srcs = ["vexflow_generator_pipeline.py"],
+    srcs_version = "PY2ONLY",
+    deps = [
+        ":generation",
+        ":image_noise",
+        "//moonlight/pipeline:pipeline_flags",
+        # absl dep
+        # apache-beam dep
+        # tensorflow dep
+    ],
 )
