Support label weights for arbitrary glyph classes.
This creates an array of weights for every glyph type, defaulting to
1.0. The integer labels just need to be looked up in this array to get
the example weights.

--- a/moonlight/models/glyphs_dnn/BUILD
+++ b/moonlight/models/glyphs_dnn/BUILD
@@ -15,6 +15,7 @@ py_library(
         # absl dep
         "//moonlight/models/base:glyph_patches",
         "//moonlight/models/base:hyperparameters",
+        "//moonlight/models/base:label_weights",
         "//moonlight/protobuf:protobuf_py_pb2",
     ],
 )
