Add precision and recall metrics for a subset of classes.
Move metrics from glyphs_dnn to base/glyph_patches.py, since they are
not neural network-specific.

--- a/moonlight/models/base/BUILD
+++ b/moonlight/models/base/BUILD
@@ -35,6 +35,7 @@ py_library(
         ":batches",
         ":label_weights",
         # absl dep
+        "//moonlight/protobuf:protobuf_py_pb2",
         "//moonlight/util:memoize",
         # tensorflow dep
     ],
