Check in the Expander NN model.
This is only an incremental improvement, but since the shallow NN model
is small (168KB), we can update it again when there is a significant
improvement.

Fixes #15 (k-means KNN had excessive memory usage).

--- a/moonlight/data/glyphs_nn_model_20180808/BUILD
+++ b/moonlight/data/glyphs_nn_model_20180808/BUILD
@@ -5,6 +5,6 @@ package(
 licenses(["notice"])  # Apache 2.0
 
 filegroup(
-    name = "knn_saved_model_20170514",
-    srcs = ["saved_model.pb"],
+    name = "glyphs_nn_model_20180808",
+    srcs = glob(["**/*"]),
 )
