--- a/moonlight/glyphs/BUILD
+++ b/moonlight/glyphs/BUILD
@@ -174,6 +174,7 @@ py_library(
     name = "saved_classifier_fn",
     srcs = ["saved_classifier_fn.py"],
     srcs_version = "PY2AND3",
+    data = ["//moonlight/data/glyphs_nn_model_20180808"],
     deps = [":saved_classifier"],
 )
 
