--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Mako
 numpy>=1.14.2
 pandas
 Pillow
-protobuf
+protobuf==3.6.1
 scipy
-tensorflow==1.9.0
+tensorflow==1.12.0
+tensorflow-estimator==1.10.12
