Add time signature extracted strips that contain the time numerals.
We will run an OCR library outside of the TF graph to get the time
values.

--- a/moonlight/BUILD
+++ b/moonlight/BUILD
@@ -23,6 +23,7 @@ py_library(
         "//moonlight/structure",
         "//moonlight/structure:beams",
         "//moonlight/structure:components",
+        "//moonlight/structure:time_signature",
         "//moonlight/structure:verticals",
         # numpy dep
         # six dep
