--- a/moonlight/staves/BUILD
+++ b/moonlight/staves/BUILD
@@ -119,7 +119,7 @@ py_library(
 
 py_test(
     name = "staffline_extractor_test",
-    size = "small",
+    size = "medium",
     srcs = ["staffline_extractor_test.py"],
     data = ["//moonlight/testdata:images"],
     srcs_version = "PY2AND3",
