--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # List of all packages used by Moonlight.
 absl-py
+# TODO(ringw): Get the latest apache beam version working in py2 tests.
 apache_beam==2.5.0; python_version < '3.0'
+apache_beam==2.11.0; python_version >= '3.0'
 backports.tempfile
 enum34
 librosa==0.4.0
