--- a/moonlight/training/clustering/BUILD
+++ b/moonlight/training/clustering/BUILD
@@ -26,7 +26,7 @@ py_test(
     size = "medium",
     srcs = ["staffline_patches_dofn_test.py"],
     data = ["//moonlight/testdata:images"],
-    srcs_version = "PY2ONLY",
+    srcs_version = "PY2AND3",
     tags = ["py2only"],
     deps = [
         ":staffline_patches_dofn",
@@ -59,7 +59,7 @@ py_library(
 py_test(
     name = "staffline_patches_kmeans_pipeline_test",
     srcs = ["staffline_patches_kmeans_pipeline_test.py"],
-    srcs_version = "PY2ONLY",
+    srcs_version = "PY2AND3",
     tags = ["py2only"],
     deps = [
         ":staffline_patches_kmeans_pipeline_lib",
