Upgrade Pip on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ before_install:
   - sha256sum -c tools/bazel_0.20.0-linux-x86_64.deb.sha256
   - sudo dpkg -i bazel_0.20.0-linux-x86_64.deb
 
+install:
+  - python -m pip install --upgrade pip setuptools
+  - pip install -r requirements.txt
+
 before_script:
   - pip install flake8
   # stop the build if there are Python syntax errors or undefined names
